2020-07-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Revise i_command_get_action_icon to return
      a dynamically allocated string because the string returned from
      geda_iface_menu_return_icon must be dynamic.

2020-07-16 Wiley E. Hill <wileyhill@gmail.com>

    * include/gschem_toplevel.h: Add member clipboard_signal_id to top
      level structure table.

    * src/base/gschem.c: Revise to load_documents to just pass MAX_PATH
      to memset instead of using sizeof and release the filename before
      reassigning the pointer.

    * src/iface/i_sessions.c: Revise translatable message case so as to
      duplicate the message with the version in i_cmd_do_close_all.

    * src/x/x_clipboard.c: Replace g_signal_handlers_disconnect_by_func
      with g_signal_handler_disconnect to reduce leaks as reported by
      valgrind.

2020-07-10 Wiley E. Hill <wileyhill@gmail.com>

    * po/bs.po: Update Bosnian translations
    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.
    * po/el.po: Update Greek translations
    * po/es.po: Update Spanish translations.
    * po/fi.po: Update Finnish translations.
    * po/sv.po: Update Swedish translations.
    * po/tr.po: Update Turkish translations.
    * po/uk.po: Update Ukrainian translations.

2020-07-04 Wiley E. Hill <wileyhill@gmail.com>

    * po/el.po: Update Greek translations
    * po/he.po: Update Hebrew translations.
    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/ml.po: Updated Malayalam translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations.
    * po/ru.po: Update Russian translations.

2020-06-27 Wiley E. Hill <wileyhill@gmail.com>

    * po/ar.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations
    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.